Bug 325591 - "Stop button" does not work during a search
Summary: "Stop button" does not work during a search
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.8
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-03 16:55 UTC by Olivier Delaune
Modified: 2019-07-02 01:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Delaune 2013-10-03 16:55:46 UTC
Hello, when you  fill an entry for a movie for example, you can use IMDB information to fill in the entry automatically. If you do so, a search bar appears in the bottom of the window with on the right a button more or less like that http://images2.wikia.nocookie.net/__cb20080413084130/routes/images/b/b0/B6a1.gif (without the blue). If I click on it, it does not happen anything. I think it should stop the search.
To test it, you may for example enter a movie title which does not exist and ask to IMDB to fill the entry.

Reproducible: Always
Comment 1 Olivier Delaune 2015-02-21 18:20:25 UTC
Probably, it comes from the fact that the search is not performed in another thread. So, one has to wait that the download is finished before be able to "stop" it. From https://bugs.kde.org/show_bug.cgi?id=262370#c1, I saw the multiple threads implementation is in your to-do list since 4 years now. Good luck
Comment 2 Robby Stephenson 2019-07-02 01:48:26 UTC
Git commit d726d30ea3e949376b270ae89892be7b7c5ff91d by Robby Stephenson.
Committed on 02/07/2019 at 01:45.
Pushed by rstephenson into branch '3.2'.

Update the status bar and button when cancelling an entry update.

Bug 325591 is improved, in that the fetcher is appropriate cancelled
though the download does still have to complete, per the implementation
of KIO Job download.
FIXED-IN: 3.2.1

M  +4    -0    ChangeLog
M  +4    -2    src/gui/statusbar.cpp
M  +0    -2    src/progressmanager.cpp

https://commits.kde.org/tellico/d726d30ea3e949376b270ae89892be7b7c5ff91d