Update the status bar and button when cancelling an entry update.

Bug 325591 is improved, in that the fetcher is appropriate cancelled
though the download does still have to complete, per the implementation
of KIO Job download.

BUG: 325591
FIXED-IN: 3.2.1